--- a/html_homework1/style.css
+++ b/html_homework1/style.css
@@ -1,12 +1,14 @@
-﻿li {
-    display: inline-block;
+﻿.element {
+    float: left;
     text-align: center;
     width: 300px;
     height: 300px;
     padding: 5px;
 }
-a {
-     text-decoration: none; 
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 .menu-link {
     color: cornflowerblue;
