--- a/html_homework1/style.css
+++ b/html_homework1/style.css
@@ -5,36 +5,42 @@
     height: 300px;
     padding: 5px;
 }
+
 .list {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+
 a {
     text-decoration: none;
 }
+
 .menu-link {
     color: cornflowerblue;
     font-size: 16px;
     line-height: 20px;
 }
-.header1{
+
+.header1 {
     color: #222222;
-font-size: 28px;
-line-height: 36px;
-font-weight: bold;
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: bold;
 }
-.paragraf{
+
+.text {
     font-style: normal;
-font-weight: 300;
-font-size: 18px;
-line-height: 30px;
-color: #7D7987;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+    color: #7D7987;
 }
-.header2{
+
+.header2 {
     color: coral;
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 80px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 80px;
 }
