--- a/html_homework4/style.css
+++ b/html_homework4/style.css
@@ -108,6 +108,7 @@ a {
     padding-top: 97px;
     padding-bottom: 96px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 30px;
