--- a/html_homework4/style.css
+++ b/html_homework4/style.css
@@ -3,11 +3,6 @@
     padding: 0;
 }
 
-.center {
-    padding-left: calc(50% - 530px);
-    padding-right: calc(50% - 530px);
-}
-
 .top {
     font-family: 'Poppins', sans-serif;
 }
@@ -45,12 +40,13 @@ a {
     margin-top: 95px;
     margin-bottom: 162px;
     display: flex;
-    justify-content: space-between;
-    gap: 40px;
+    justify-content: center;
+    gap: 41px;
 }
 
 .top_info {
     margin-top: 101px;
+    width: 522px;
 }
 
 .title {
