--- a/html_homework5/style.css
+++ b/html_homework5/style.css
@@ -133,7 +133,7 @@ a {
 
 .feature_box {
     width: 370px;
-    padding: 32px 31px 32px 29px;
+    padding: 28px;
     background: #FFF;
     display: flex;
     flex-direction: column;
