--- a/html_lesson3_4_5_6/style.css
+++ b/html_lesson3_4_5_6/style.css
@@ -23,7 +23,6 @@ img {
 }
 
 .header {
-    background-color: rgba (255, 255, 255, 0.02);
     padding-top: 39px;
     padding-bottom: 39px;
     display: flex;
@@ -45,10 +44,6 @@ img {
     display: flex;
     justify-content: center;
     gap: 126px;
-}
-
-.top_info {
-    width: 604px;
 }
 
 .subtitle {
@@ -161,6 +156,10 @@ img {
         padding-right: calc(50% - 383px);
     }
 
+    .header {
+        gap: 32px;
+    }
+
     .top_content {
         flex-wrap: wrap;
     }
@@ -188,5 +187,58 @@ img {
     .item_image_big {
         width: 98px;
         height: 103px;
+    }
+}
+
+@media (max-width: 767px) {
+    .center {
+        padding-left: calc(50% - 170px);
+        padding-right: calc(50% - 170px);
+    }
+
+    .header {
+        padding-top: 22px;
+        padding-bottom: 22px;
+        gap: 16px;
+    }
+
+    .header__link {
+        font-size: 14px;
+    }
+
+    .top_content {
+        margin-top: 64px;
+        margin-bottom: 128px;
+        text-align: center;
+    }
+
+    .subtitle {
+        margin-bottom: 16px;
+        font-size: 14px;
+    }
+
+    .title {
+        margin-bottom: 64px;
+        font-size: 28px;
+    }
+
+    .top_buttons {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 39px;
+        gap: 24px;
+    }
+
+    .logo {
+        width: auto;
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+    }
+
+    .content {
+        grid-template-columns: minmax(auto, 362px);
+        padding-top: 126px;
+        gap: 32px;
     }
 }
