--- a/html_homework6_7_8/style.css
+++ b/html_homework6_7_8/style.css
@@ -58,7 +58,6 @@ a {
     flex-direction: column;
     justify-content: center;
     text-align: left;
-    overflow-wrap: break-word;
 }
 
 .top__title {
@@ -86,11 +85,11 @@ a {
     background: #FFF;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 260px 180px;
     gap: 30px;
 }
 
 .offer__item {
-    height: 260px;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -122,7 +121,6 @@ a {
 
 .item_wide {
     grid-column: span 3;
-    height: 180px;
     background-image: url(image/accesories.png);
 }
 
@@ -238,7 +236,6 @@ a {
         gap: 39px 16px;
     }
 
-
     .top__title {
         font-size: 44px;
     }
@@ -250,14 +247,7 @@ a {
     .offer {
         margin-bottom: 110px;
         gap: 19px;
-    }
-
-    .offer__item {
-        height: 168px;
-    }
-
-    .item_wide {
-        height: 116px;
+        grid-template-rows: 168px 116px;
     }
 
     .products__title {
@@ -295,7 +285,7 @@ a {
     }
 
     .top__titles {
-        width: auto;
+        /* width: auto; */
         margin-top: 148px;
         margin-bottom: 148px;
     }
@@ -309,25 +299,20 @@ a {
     }
 
     .offer {
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-        margin-bottom: 64px;
-    }
-
-    .offer__item {
-        height: 248px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 248px) 111px;
     }
 
     .item_wide {
-        height: 111px;
+        grid-column: auto;
     }
 
     .products__content {
         margin-top: 64px;
         margin-bottom: 40px;
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
         gap: 16px;
     }
 
