--- a/html_homework6_7_8/style.css
+++ b/html_homework6_7_8/style.css
@@ -16,6 +16,11 @@ a {
     padding-right: calc(50% - 570px);
 }
 
+.center_wide {
+    padding-right: calc(50% - 800px);
+    padding-left: calc(50% - 800px);
+}
+
 .header {
     display: flex;
     height: 75px;
@@ -38,8 +43,6 @@ a {
 }
 
 .top__content {
-    padding-right: calc(50% - 800px);
-    padding-left: calc(50% - 800px);
     display: flex;
     align-items: center;
     background: #F1E4E6;
@@ -132,6 +135,10 @@ a {
     line-height: normal;
 }
 
+.products {
+    position: relative;
+}
+
 .products__title {
     color: #222;
     font-size: 30px;
@@ -199,7 +206,9 @@ a {
 }
 
 .browse__button {
-    margin: 0 auto;
+    max-width: 212px;
+    text-align: center;
+    margin: 0 auto 60px;
     display: block;
     border: 1px solid #FF6A6A;
     padding: 15px 39px;
@@ -209,7 +218,130 @@ a {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 60px;
+}
+
+.advantages {
+    background: #222224;
+    display: flex;
+    gap: 30px;
+    text-align: center;
+    justify-content: center;
+
+}
+
+.advantages__item {
+    padding: 103px 20px;
+    padding-bottom: 103px;
+}
+
+.advantages__title {
+    margin-top: 28px;
+    margin-bottom: 15px;
+    color: #FBFBFB;
+    font-size: 19.96px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.advantages__text {
+    color: #FBFBFB;
+    font-family: Lato;
+    font-size: 13.972px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.subscribe {
+    background-image: url(image/photo_subscribe.png);
+    display: flex;
+}
+
+.subscribe__item {
+    width: 50%;
+    text-align: center;
+}
+
+.subscribe__item__foto {
+    display: block;
+    margin: 97px auto 30px auto;
+
+}
+
+.subscribe__quote {
+    max-width: 359 px;
+    margin-bottom: 126px;
+    color: #222224;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.subscribe__title {
+    color: #222224;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 167.2%;
+    margin-top: 150px;
+    margin-bottom: 28px;
+}
+
+.subscribe__text {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.input__email {
+    background-color: #E1E1E1;
+    width: 256px;
+    height: 49px;
+    border: 0 #E1E1E1;
+    border-radius: 100px 15px 15px 100px;
+    padding-left: 22px;
+    color: #222224;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.subscribe__button {
+    width: 100px;
+    height: 49px;
+    background-color: #F16D7F;
+    border: 0 #F16D7F;
+    border-radius: 15px 100px 100px 15px;
+    color: #FFF;
+    text-align: center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.footer {
+    display: flex;
+    background-color: #222224;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer__brand {
+    color: #FBFBFB;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.footer__links {
+    display: flex;
+    gap: 7px;
 }
 
 /* для планшета */
@@ -217,6 +349,11 @@ a {
     .center {
         padding-left: calc(50% - 367px);
         padding-right: calc(50% - 367px);
+    }
+
+    .center_wide {
+        padding-right: calc(50% - 385px);
+        padding-left: calc(50% - 385px);
     }
 
     .header {
@@ -231,8 +368,6 @@ a {
     }
 
     .top__content {
-        padding-right: calc(50% - 385px);
-        padding-left: calc(50% - 385px);
         gap: 39px 16px;
     }
 
