--- a/html_lesson3_4_5_6/style.css
+++ b/html_lesson3_4_5_6/style.css
@@ -136,6 +136,7 @@ img {
     font-style: normal;
     font-weight: 700;
     line-height: 125%;
+    background: inherit;
     opacity: 0.7;
 }
 
@@ -146,6 +147,7 @@ img {
     font-style: normal;
     font-weight: 600;
     line-height: 160%;
+    background: inherit;
     opacity: 0.7;
 }
 
@@ -176,7 +178,7 @@ img {
         display: grid;
         justify-content: center;
         gap: 30px;
-        grid-template-columns: repeat(1, 362px);
+        grid-template-columns: minmax(auto, 362px);
     }
 
     .item_big {
@@ -192,8 +194,8 @@ img {
 
 @media (max-width: 767px) {
     .center {
-        padding-left: calc(50% - 170px);
-        padding-right: calc(50% - 170px);
+        padding-left: 16px;
+        padding-right: 16px;
     }
 
     .header {
@@ -237,7 +239,6 @@ img {
     }
 
     .content {
-        grid-template-columns: minmax(auto, 362px);
         padding-top: 126px;
         gap: 32px;
     }
