--- a/homework_6_7_8_9/style.css
+++ b/homework_6_7_8_9/style.css
@@ -312,6 +312,14 @@ a {
     opacity: 1;
 }
 
+.product__button:hover {
+    cursor: pointer;
+}
+
+.product__button:hover svg path {
+    fill: #F16D7F;
+}
+
 .product__name {
     margin-bottom: 12px;
     color: #000;
@@ -470,6 +478,7 @@ a {
 
 .subscribe__button:hover {
     background-color: #f2465d;
+    cursor: pointer;
 }
 
 .footer {
